--- a/templates/settings-user.html
+++ b/templates/settings-user.html
@@ -169,12 +169,12 @@
                                 {% set role = "Administrador" %}
                             {% endif %}
                             <option value="{{work[0]}}">{{work[0]}} - {{role}}</option>
-                            {% endfor %}
+                            {%endfor%}
                         </select>
                     </div>
                     <div class="form-group">
-                        <label for="username">Usuario:</label>
-                        <input type="text" id="username" name="new_username" placeholder="Ingrese el nombre de usuario">
+                        <label for="username">Nombre de usuario:</label>
+                        <input type="text" id="username" name="new_username" placeholder="Ingrese el nuevo nombre de usuario:">
                     </div>
                     <div class="form-group">
                         <label for="editRole">Cargo:</label>
