--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Login</title>
+  <title>CopyNato | Inicio de sesión</title>
   <link rel="icon" type="image/x-icon" href="../static/img/icon.ico">
   <link rel="stylesheet" href="../static/css/style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
@@ -54,6 +54,7 @@
         </div>
       </div>
       <p class="modal__paragraph">Para más información o reporte de problemas. Scannea el código QR</p>
+      <p class="text-extra">Desarrollado por: <br>Rafael Bonilla <br>César Maldonado <br>Andrés Martínez <br>José Caldera</p>
       <a href="#" class="btn__cerrar">Cerrar</a>
     </div>
   </section>
@@ -62,7 +63,7 @@
 
   <div class="fondo-animado"></div>
   <div class="formulario">
-    <h1>INICIO DE SESIÓN</h1>
+    <h1>Inicio de sesión</h1>
     <form method="post" action="{{ url_for('login') }}">
       <div class="username">
           <input name="username" type="text">
