--- a/templates/home.html
+++ b/templates/home.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Inicio - CopyNato</title>
+    <title>CopyNato | Inicio</title>
     <link rel="icon" type="image/x-icon" href="../static/img/icon.ico">
     <link rel="stylesheet" href="../static/css/main.css">
     <link rel="stylesheet" href="../static/css/scrollbar.css">
@@ -14,7 +14,11 @@
     <link href='https://unpkg.com/boxicons@2.1.1/css/boxicons.min.css' rel='stylesheet'>
 </head>
 
+
+
 <body>
+    
+    
     <nav class="sidebar close">
         <header>
             <div class="image-text">
@@ -352,17 +356,6 @@
                                 <textarea id="description" name="description" rows="4" required
                                     style="resize: none;"></textarea>
                             </div>
-                            <div class="form-group">
-                                <div class="upload-icon-container" onclick="document.getElementById('file').click();">
-                                </div>
-                                <div class="form-group upload-box">
-                                    <div class="upload-icon-container">
-                                        <i class="fas fa-upload"></i>
-                                        <span>Subir archivo</span>
-                                        <input type="file" id="file" onchange="previewImage(this)">
-                                    </div>
-                                </div>
-                            </div>
                         </div>
                         <div class="form-row">
                             <div class="form-group">
@@ -489,7 +482,7 @@
             </div>
         </div>
     </section>
-
+    <script src="../static/js/loader.js"></script>
     <script src="../static/js/home.js"></script>
     <script src="../static/js/sidebar.js"></script>
     <script src="../static/js/card-color.js"></script>
