--- a/templates/settings-record.html
+++ b/templates/settings-record.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Historial - CopyNato</title>
+    <title>CopyNato | Historial</title>
     <link rel="icon" type="image/x-icon" href="../static/img/icon.ico">
     <link rel="stylesheet" href="../static/css/settings.css">
     <link rel="stylesheet" href="../static/css/scrollbar.css">
