--- a/templates/settings-record.html
+++ b/templates/settings-record.html
@@ -113,6 +113,7 @@
 
         <div class="container">
             <form action="{{ url_for('create_record') }}" target="response_frame" method="POST">
+                <div class="button-container">
                 <div class="select-container">
                     <div class="select-container" id="existing-user-select">
                         <select class="select" id="select-client" name="client" onchange="autocompleteUser()">
@@ -127,6 +128,7 @@
                         <button id="updateButton" class="button" type="button">Actualizar</button>
                     </div>
                 </div>
+            </div>
                 <div class="row">
                     <div class="grid-container">
                         {% for item in filas %}
