--- a/templates/home.html
+++ b/templates/home.html
@@ -391,20 +391,24 @@
         </div>
         <div class="counter-container">
             <div class="counter-box box-a">
-                <h2>Total de Trabajos</h2>
+                <h2>Total de trabajos</h2>
                 <span id="totalJobs">0</span>
             </div>
             <div class="counter-box box-b">
-                <h2>Contador 2</h2>
-                <span>0</span>
+                <h2>Diseño</h2>
+                <span id="totalDesign">0</span>
             </div>
             <div class="counter-box box-c">
-                <h2>Contador 3</h2>
-                <span>0</span>
+                <h2>Aprobación</h2>
+                <span id="totalAproval">0</span>
             </div>
             <div class="counter-box box-d">
-                <h2>Contador 4</h2>
-                <span>0</span>
+                <h2>elaboracion</h2>
+                <span id="totalCrafting">0</span>
+            </div>
+            <div class="counter-box box-d">
+                <h2>Entrega</h2>
+                <span id="totalInstall">0</span>
             </div>
         </div>
         
