--- a/templates/home.html
+++ b/templates/home.html
@@ -391,7 +391,7 @@
         </div>
         <div class="counter-container">
             <div class="counter-box box-a">
-                <h2>Total de trabajos</h2>
+                <h2>Trabajos</h2>
                 <span id="totalJobs">0</span>
             </div>
             <div class="counter-box box-b">
