--- a/templates/settings.html
+++ b/templates/settings.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CopyNato | Ajustes</title>
     <link rel="icon" type="image/x-icon" href="../static/img/icon.ico">
+    <link rel="stylesheet" href="../static/css/main.css">
     <link rel="stylesheet" href="../static/css/settings.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     <link href='https://unpkg.com/boxicons@2.1.1/css/boxicons.min.css' rel='stylesheet'>
@@ -100,14 +101,22 @@
     </nav>
     <section class="home">
         <div class="home-header">
-            <div class="text">Ajustes</div>
+            <div class="text">Ajustes</div>                
+            <div class="notification-container">
+                <div class="notification-indicator" id="notificationIndicator"></div> <!-- Indicador de notificación -->
+                <button class="notification-button" id="notificationButton">
+                    <i class="bx bxs-bell"></i> <!-- Icono de notificaciones -->
+                </button>
+                <div class="notification-dropdown" id="notificationDropdown"></div>
+            </div>
+            
         </div>
         <div class="form-container">
             <div class="settings-options">
                 <div class="setting-option">
                     <a href="{{ url_for('settings_user') }}">
                         <i class="fas fa-users"></i>
-                        <span>Gestionar Usuarios</span>
+                        <span>Gestionar usuarios</span>
                     </a>
                 </div>
                 <div class="setting-option">
@@ -119,7 +128,7 @@
                 <div class="setting-option">
                     <a href="{{ url_for('settings_client') }}">
                         <i class="fas fa-user-circle"></i>
-                        <span>Gestionar Clientes</span>
+                        <span>Gestionar clientes</span>
                     </a>
                 </div>
                 <div class="setting-option">
@@ -133,5 +142,7 @@
         </div>
     </section>
     <script src="../static/js/sidebar.js"></script>
+    <script src="../static/js/send-notifications.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.0.0/socket.io.js"></script>
 </body>
 </html>
