--- a/templates/settings-client.html
+++ b/templates/settings-client.html
@@ -122,10 +122,17 @@
                     <i class='bx bx-chevron-left'></i>
                 </a>
                 <div class="text">
-                    <a href="/settings" style="color: #695cfe; text-decoration: none;">Ajustes</a> > Gestión de Clientes
+                    <a href="/settings" style="color: #695cfe; text-decoration: none;">Ajustes</a> > Gestión de clientes
                 </div>
             </div>
             <div class="text"></div>
+            <div class="notification-container">
+                <div class="notification-indicator" id="notificationIndicator"></div> <!-- Indicador de notificación -->
+                <button class="notification-button" id="notificationButton">
+                    <i class="bx bxs-bell"></i> <!-- Icono de notificaciones -->
+                </button>
+                <div class="notification-dropdown" id="notificationDropdown"></div>
+            </div>
             <button class="add-btn" type="button" id="openModal">
                 <span class="button__text">Añadir</span>
                 <span class="button__icon">
@@ -293,6 +300,8 @@
     <script src="../static/js/sidebar.js"></script>
     <script src="../static/js/settings-client.js"></script>
     <script src="../static/js/flash.js"></script>
+    <script src="../static/js/send-notifications.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.0.0/socket.io.js"></script>
     <script>
 document.addEventListener('DOMContentLoaded', () => {
     const searchInput = document.getElementById('searchInput');
