--- a/templates/settings-user.html
+++ b/templates/settings-user.html
@@ -120,6 +120,14 @@
                             <a href="/settings" style="color: #695cfe; text-decoration: none;">Ajustes</a> > Gestión de usuarios
                         </div>
                     </div>
+                    
+                </div>
+                <div class="notification-container">
+                    <div class="notification-indicator" id="notificationIndicator"></div> <!-- Indicador de notificación -->
+                    <button class="notification-button" id="notificationButton">
+                        <i class="bx bxs-bell"></i> <!-- Icono de notificaciones -->
+                    </button>
+                    <div class="notification-dropdown" id="notificationDropdown"></div>
                 </div>
             </div>
         </div>
@@ -203,6 +211,8 @@
     </section>
     <script src="../static/js/sidebar.js"></script>
     <script src="../static/js/settings-users.js"></script>
+    <script src="../static/js/send-notifications.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.0.0/socket.io.js"></script>
     <script src="../static/js/flash.js"></script>
 </body>
 </html>
