--- a/templates/settings-client.html
+++ b/templates/settings-client.html
@@ -183,7 +183,7 @@
                         <div class="upload-icon-container">
                             <i class="fas fa-upload"></i>
                             <span>Subir archivo</span>
-                            <input type="file" id="file" name="file" onchange="previewImage(this)">
+                            <input type="file" id="file" name="file" accept=".jpg, .png, .jpeg, .bmp" onchange="previewImage(this)">
                         </div>
                     </div>
                 </div>
@@ -272,7 +272,7 @@
                     <div class="upload-icon-container">
                         <i class="fas fa-upload"></i>
                         <span>Subir archivo</span>
-                        <input type="file" id="editFile" name="photo" onchange="previewImage(this)">
+                        <input type="file" id="editFile" name="photo" accept=".jpg, .png, .jpeg, .bmp" onchange="previewImage(this)">
                     </div>
                 </div>
             </div>
